api solved with private final